Added more text in Met Office section

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <h4 class="grey">Met Office</h4>
       </div>
       <div class="nine columns">
-        <p><a href="http://www.metoffice.gov.uk/">Met Office</a> is the leading weather & climate research centre located in Exeter, UK. I worked for the Advanced Visualisation & Data team, developing a data analysis/visualisation software to be used by the scientists.</p>
+        <p><a href="http://www.metoffice.gov.uk/">Met Office</a> is the leading weather & climate research centre located in Exeter, UK. I worked for the Advanced Visualisation & Data team, developing a data analysis/visualisation software to be used by scientists. I was there as a placement/intern student and stayed for a year before going back to finish my degree.</p>
       </div>
     </div>
 
