--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <div class="twelve columns">
         <p>Technologist. Entrepreneur. Musichead.</p>
 
-        <p>I'm currently the Founder & CEO at <a href="http://www.joyz.co.jp/">Joyz Inc.</a> a Tokyo-based startup that provides a reservation-free, all-you-can-talk English course backed by an AI conversation engine. Outside of work, you can find me helping out with PyCon JP conferences and the <a href="http://wbawakate.jp/">Whole Brain Architecture</a> initiative.</p>
+        <p>I'm currently the Founder & CEO at <a href="http://www.joyz.co.jp/">Joyz Inc.</a> a Tokyo-based startup that provides a reservation-free, all-you-can-talk English course backed by an AI conversation engine. Outside of work, you can find me helping out with PyCon JP conferences and the <a href="http://wbawakate.jp/">Whole Brain Architecture: Future Leaders</a> initiative.</p>
 
         <p>I have a BSc degree in Natural Sciences from <a href="http://www.bath.ac.uk/">University of Bath, UK</a>. My main subjects of study were Physics and Management.</p>
       </div>
