refactored css reference

--- a/index.html
+++ b/index.html
@@ -28,53 +28,11 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/skeleton.css">
+  <link rel="stylesheet" href="css/common.css">
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="images/favicon.png">
-
-  <style>
-  .nav {
-    padding-top: 20px;
-    border-bottom: thin solid #e0e0e0;
-    margin-bottom: 10px;
-  }
-
-  .grey {
-    color: #888;
-  }
-
-  .nav-title {
-    margin-bottom: 4px;
-  }
-
-  .nav-item {
-    vertical-align: baseline;
-  }
-
-  .cover {
-    width: 100%;
-  }
-
-  .section-title {
-    text-align: center;
-    margin-top: 50px;
-    margin-bottom: 3  0px;
-  }
-
-  .sub-section {
-    margin-bottom: 20px;
-  }
-
-  .footer {
-    margin-top: 80px;
-    text-align: center;
-    border-top: thin solid #e0e0e0;
-    padding-top: 10px;
-    padding-bottom: 30px;
-  }
-
-  </style>
 
 </head>
 <body>
