--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
 
     <div class="footer">
       <div class="row">
-        <div class="three columns"><a href="https://twitter.com/1664riffs/">Twitter</a></div>
+        <div class="three columns"><a href="https://twitter.com/y15a_/">Twitter</a></div>
         <div class="three columns"><a href="https://www.facebook.com/yoshiyuki.kakihara">Facebook</a></div>
-        <div class="three columns"><a href="https://github.com/ykakihara">GitHub</a></div>
-        <div class="three columns"><a href="http://www.joyz.co.jp/">My Company</a></div>
+        <div class="three columns"><a href="https://medium.com/@1664riffs">Medium</a></div>
+        <div class="three columns"><a href="https://www.joyz.co.jp/">My Company</a></div>
       </div>
     </div>
 
