--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Yoshiyuki Kakihara | 柿原祥之</title>
+  <title>Yoshiyuki Kakihara</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -16,13 +16,13 @@
   <!-- SEO
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta name="robots" content="index,follow,archive">
-  <meta name="title" content="Yoshiyuki Kakihara | 柿原祥之">
-  <meta name="keyword" content="英会話,ジョイズ,AI,Joyz,python,entrepreneur">
-  <meta name="description" content="Technologist. Entrepreneur. Musichead.">
+  <meta name="title" content="Yoshiyuki Kakihara">
+  <meta name="keyword" content="英会話,ジョイズ,AI,Joyz">
+  <meta name="description" content="">
 
   <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -46,7 +46,7 @@
     </div>
     <div class="row">
       <div class="twelve columns">
-        <img class="cover" src="images/cover.jpg"/>
+        <img class="cover" src="images/cover2.jpg"/>
       </div>
     </div>
 
@@ -54,7 +54,7 @@
 
     <div class="row">
       <div class="twelve columns">
-        <p>Technologist. Entrepreneur. Musichead.</p>
+        <p>A technologist, and an entrepreneur.</p>
 
         <p>I'm currently the Founder & CEO at <a href="http://www.joyz.co.jp/">Joyz Inc.</a> a Tokyo-based startup that provides a reservation-free, all-you-can-talk English course backed by an AI conversation engine. Outside of work, you can find me helping out with PyCon JP conferences and the <a href="http://wbawakate.jp/">Whole Brain Architecture: Future Leaders</a> initiative.</p>
 
@@ -88,8 +88,8 @@
       <div class="row">
         <div class="three columns"><a href="https://twitter.com/y15a_/">Twitter</a></div>
         <div class="three columns"><a href="https://www.facebook.com/yoshiyuki.kakihara">Facebook</a></div>
-        <div class="three columns"><a href="https://medium.com/@1664riffs">Medium</a></div>
-        <div class="three columns"><a href="https://www.joyz.co.jp/">My Company</a></div>
+        <div class="three columns"><a href="https://www.linkedin.com/in/yoshiyuki-kakihara-6a158322/">LinkedIn</a></div>
+        <div class="three columns"><a href="https://github.com/ykakihara">GitHub</a></div>
       </div>
     </div>
 
