Cosmetic & copy changes

--- a/index.html
+++ b/index.html
@@ -67,7 +67,11 @@
 
         <p>I'm currently the Founder & CEO at <a href="http://www.joyz.co.jp/">Joyz Inc.</a> a Tokyo-based startup that provides a reservation-free, all-you-can-talk English course backed by an AI conversation engine. Outside of work, you can find me helping out with local developer communities.</p>
 
-        <p>I have a BSc degree in Natural Sciences from <a href="http://www.bath.ac.uk/">University of Bath, UK</a>. My main subjects of study were Physics and Management.</p>
+        <p>I enjoy solving hard real-life problems using interdisciplinary thinking, bringing experts together. I invent, and reinvent. You are always as good as your next thing. Occasionally I also engage myself with building something for the fun of it.</p>
+
+        <p>Things I think I know a little bit about: software, Physics, business models, startup finance, language acquisition.</p>
+
+        <p>I have a BSc degree in Natural Sciences from <a href="http://www.bath.ac.uk/">University of Bath, UK</a>.
       </div>
     </div>
 
@@ -78,8 +82,7 @@
         <h4 class="grey">Sony</h4>
       </div>
       <div class="nine columns">
-        <p>I joined the car radio business as a new grad. I wrote production code and managed an offshore dev team.</p>
-        <p>Later I got quite involved with the MirrorLink standardisation effort at <a href="http://www.mirrorlink.com/">Car Connectivity Consortium</a>, serving as the task lead for Applicaiton Certification. I had the honour of working with some of the best mind in the smartphone and auto industry.</p>
+        <p>While I was at their car radio business, I got quite involved with the MirrorLink standardisation effort at <a href="http://www.mirrorlink.com/">Car Connectivity Consortium</a>, serving as the task lead for Applicaiton Certification. I had the honour of working with some of the best mind in the smartphone and auto industry.</p>
         <p>In the last 20 months at Sony I worked for the Business & Innovations Lab, helping with a range of new product ideas. One product that made it to the real world is <a href="http://meshprj.com/en/">MESH</a>, a unified hardware-software platform aimed at the DIY-minds of 21st century.</p>
       </div>
     </div>
@@ -93,6 +96,16 @@
       </div>
     </div>
 
+    <h3 class="grey section-title">Personal Projects</h3>
+    <div class="row sub-section">
+      <div class="twelve columns"> 
+        <p>
+          <a href="https://minimalurl-146310.appspot.com">min301</a> - a simple redirect utility. It gives you a link you can embed in your href, which will redirect the user depending on which OS is used to access the link.</li>
+        </p>
+      </div>
+    </div>
+
+    
     <div class="footer">
       <div class="row">
         <div class="three columns"><a href="https://twitter.com/y15a_/">Twitter</a></div>
